# ts-stationary

./: .gitignore  COMMIT_MESSAGE.txt  QUICK_START_GUIDE.md  README.md  pyproject.toml  requirements.txt  setup.py
dataset_generation_evolution/: GIT_MIGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  cleanup.py  compare_datasets.py  quick_test.py  test_library.py  validate_project.py
dataset_generation_evolution/_old_files/: dataset.py  dataset_generator.py  generator.py
dataset_generation_evolution/timeseries_dataset_generator/: MANIFEST.in  QUICKSTART.md  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
docs/: DATASET_GENERATION_GUIDE.md  QUICK_REFERENCE.md  QUICK_START_GUIDE.md  VISUALIZATION_AND_ANALYSIS_GUIDE.md
examples/: analyze_datasets.py  dataset_generation.py  dataset_updated.py  quick_start.ipynb  simple_generation.py  visualize_datasets.py
stat-det/: README.md  app.py  feature_extraction.py  predict_new_data.py  requirements.txt  run_pipeline.py  setup_web.py  train_models.py
stat-det/models/: best_model.pkl  best_model_info.json  decisiontree_model.pkl  feature_info.json  logisticregression_model.pkl  naivebayes_model.pkl  randomforest_model.pkl  scaler.pkl  training_results.json
stat-det/templates/: index.html
stationarykerem/seasonal/: app.py  creator_ex.py  example_multiple_seasonal.csv  example_seasonal_with_breakpoint.csv  requirements.txt
stationarykerem/stat/: app.py  data_preparation.py  generate_multicol_datasets.py  infodatasets.csv  kpss_test_evaluation.py  lstm_model.pt  other_tests_evaluation.py  test_models.py  train_lstm.py  train_xgb.py  xgb_model.pkl
stationarykerem/trend/: requirements.txt  run_all.bat
time-series-generator/: generate-ts.ipynb
time-series-generator/Cemre-tez-kodlar/: Data_Generation.ipynb  Test.ipynb  data_utils.py  datagen_utils.py  models.py  train_utils.py
time-series-generator/timeseries_generator/: generator.py  visualizer.py
timeseries_dataset_generator/: __init__.py
timeseries_dataset_generator/core/: generator.py  metadata.py
timeseries_dataset_generator/generators/: __init__.py  anomalies.py  seasonality.py  stationary.py  stochastic.py  structural_breaks.py  trends.py  volatility.py
(+2051 files in other folders)
